ci_log.txt
Downloading https://services.gradle.org/distributions/gradle-8.2-bin.zip
............10%............20%............30%.............40%............50%............60%............70%.............80%............90%............100%

Welcome to Gradle 8.2!

Here are the highlights of this release:
 - Kotlin DSL: new reference documentation, assignment syntax by default
 - Kotlin DSL is now the default with Gradle init
 - Improved suggestions to resolve errors in console output

For more details see https://docs.gradle.org/8.2/release-notes.html

To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.2/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :app:preBuild UP-TO-DATE
> Task :app:preReleaseBuild UP-TO-DATE
> Task :app:generateReleaseResValues
> Task :app:generateReleaseResources
> Task :app:dataBindingMergeDependencyArtifactsRelease
> Task :app:packageReleaseResources
> Task :app:mergeReleaseResources
> Task :app:parseReleaseLocalResources
> Task :app:javaPreCompileRelease
> Task :app:dataBindingGenBaseClassesRelease
> Task :app:mapReleaseSourceSetPaths
> Task :app:checkReleaseAarMetadata
> Task :app:createReleaseCompatibleScreenManifests
> Task :app:extractDeepLinksRelease
> Task :app:processReleaseMainManifest
> Task :app:processReleaseManifest
> Task :app:extractProguardFiles
> Task :app:mergeReleaseJniLibFolders
> Task :app:processReleaseManifestForPackage
> Task :app:processReleaseResources
> Task :app:mergeReleaseNativeLibs

> Task :app:compileReleaseJavaWithJavac FAILED
/home/runner/work/SwiftDoc/SwiftDoc/app/src/main/java/com/swiftdoc/pdf22449/activities/ScanActivity.java:33: error: package com.google.common.util.concurrent does not exist
import com.google.common.util.concurrent.ListenableFuture;
                                        ^
/home/runner/work/SwiftDoc/SwiftDoc/app/src/main/java/com/swiftdoc/pdf22449/activities/CropActivity.java:40: error: cannot find symbol
    private CropOverlayView cropOverlay;
            ^
  symbol:   class CropOverlayView
  location: class CropActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 57s
19 actionable tasks: 19 executed
